# rofs

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-build.sh  docker-compose.yml  docker-run.sh  ssl-cert.sh
certs/: ca.key  ca.pem  ca.srl  client.crt  client.csr  client.key  client.p12  server.crt  server.csr  server.key  server_ext.cnf
src/: lib.rs  main.rs  pages.rs  upload.rs
src/middleware/: router.rs
templates/: upload.html
tests/: upload_test.rs
